[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://redicon.png" type="Texture" id=2]
[ext_resource path="res://part.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 31.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 15.9652 )

[node name="bodyParent" type="Position2D"]
z_as_relative = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="bodyPart" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )

[node name="bodyButton" type="Area2D" parent="."]
position = Vector2( 32, 0 )
z_index = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="bodyButton"]
shape = SubResource( 1 )

[node name="FKButton" type="Area2D" parent="."]
position = Vector2( 64, 0 )
z_index = 999

[node name="Sprite" type="Sprite" parent="FKButton"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="FKCollision" type="CollisionShape2D" parent="FKButton"]
z_index = 999
shape = SubResource( 2 )

[connection signal="mouse_entered" from="bodyButton" to="." method="_on_bodyButton_mouse_isOver" binds= [ true ]]
[connection signal="mouse_exited" from="bodyButton" to="." method="_on_bodyButton_mouse_isOver" binds= [ false ]]
[connection signal="mouse_entered" from="FKButton" to="FKButton" method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="FKButton" to="." method="_on_FKButton_mouse_isOver" binds= [ true ]]
[connection signal="mouse_exited" from="FKButton" to="FKButton" method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="FKButton" to="." method="_on_FKButton_mouse_isOver" binds= [ false ]]
